--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 		
 					</div>
 					<h1 class="brand-heading">Daniel Mariano</h1><br>
-					<p class="intro-text typewrite" style="color:#00BF00" data-period="1000" data-type='["User Experience Designer", "Jam Session Explorer", "User Experience Designer", "Cook Hacker", "User Experience Designer", "Music Lover"]'></p>
+					<p class="intro-text typewrite" style="color:#00BF00" data-period="1000" data-type='["User Experience Designer", "Jam Session Explorer", "User Experience Designer"]'></p>
 				</div>
 			</div>
 		</div>
