--- a/test.html
+++ b/test.html
@@ -14,7 +14,7 @@
 <!-- Custom Fonts -->
 <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 <link href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,700,400italic,700italic" rel="stylesheet" type="text/css">
-<link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">\
+<link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
 
 <!--link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous"-->
 
@@ -36,6 +36,7 @@
 <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
 <script src="js/typewriter.js"></script>
 <script src="js/sort.js"></script>
+<script src="js/slider.js"></script>
 </head>
 
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
@@ -132,6 +133,71 @@
 	</div>
 </section>
 
+
+<!--div id="projects" class="slider-container">
+	<div class="slider-control left inactive"></div>
+	      <div class="slider-control right"></div>
+	      <ul class="slider-pagi"></ul>
+	      <div class="slider">
+	        <div class="slide slide-0 active">
+	          <div class="slide__bg"></div>
+	          <div class="slide__content">
+	            <svg class="slide__overlay" viewBox="0 0 720 405" preserveAspectRatio="xMaxYMax slice">
+	              <path class="slide__overlay-path" d="M0,0 150,0 500,405 0,405" />
+	            </svg>
+	            <div class="slide__text">
+	              <h2 class="slide__text-heading">Smart-device for operators</h2>
+	              <p class="slide__text-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio veniam minus illo debitis nihil animi facere, doloremque voluptate tempore quia. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio veniam minus illo debitis nihil animi facere, doloremque voluptate tempore quia.</p>
+	              <a href="http://hkmbhutto.wix.com/abdulrasheed"
+	              class="slide__text-link">Project link</a>
+	            </div>
+	          </div>
+	        </div>
+	        <div class="slide slide-1 ">
+	          <div class="slide__bg"></div>
+	          <div class="slide__content">
+	            <svg class="slide__overlay" viewBox="0 0 720 405" preserveAspectRatio="xMaxYMax slice">
+	              <path class="slide__overlay-path" d="M0,0 150,0 500,405 0,405" />
+	            </svg>
+	            <div class="slide__text">
+	              <h2 class="slide__text-heading">Cooking-aid Smart-Table</h2>
+	              <p class="slide__text-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio veniam minus illo debitis nihil animi facere, doloremque voluptate tempore quia. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio veniam minus illo debitis nihil animi facere, doloremque voluptate tempore quia.</p>
+	              <a href="http://hkmbhutto.wix.com/abdulrasheed" 
+	              class="slide__text-link">Project link</a>
+	            </div>
+	          </div>
+	        </div>
+	        <div class="slide slide-2">
+	          <div class="slide__bg"></div>
+	          <div class="slide__content">
+	            <svg class="slide__overlay" viewBox="0 0 720 405" preserveAspectRatio="xMaxYMax slice">
+	              <path class="slide__overlay-path" d="M0,0 150,0 500,405 0,405" />
+	            </svg>
+	            <div class="slide__text">
+	              <h2 class="slide__text-heading">Wearable Activity Dashboard</h2>
+	              <p class="slide__text-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio veniam minus illo debitis nihil animi facere, doloremque voluptate tempore quia. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio veniam minus illo debitis nihil animi facere, doloremque voluptate tempore quia.</p>
+	              <a href="http://hkmbhutto.wix.com/abdulrasheed"
+	              class="slide__text-link">Project link</a>
+	            </div>
+	          </div>
+	        </div>
+	        <div class="slide slide-3">
+	          <div class="slide__bg"></div>
+	          <div class="slide__content">
+	            <svg class="slide__overlay" viewBox="0 0 720 405" preserveAspectRatio="xMaxYMax slice">
+	              <path class="slide__overlay-path" d="M0,0 150,0 500,405 0,405" />
+	            </svg>
+	            <div class="slide__text">
+	              <h2 class="slide__text-heading">Ticketshop Dashboard</h2>
+	              <p class="slide__text-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio veniam minus illo debitis nihil animi facere, doloremque voluptate tempore quia. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio veniam minus illo debitis nihil animi facere, doloremque voluptate tempore quia.</p>
+	              <a href="http://hkmbhutto.wix.com/abdulrasheed"
+	              class="slide__text-link">Project link</a>
+	            </div>
+	          </div>
+	        </div>
+	      </div>
+</div-->
+
 <!-- Projects Section-->
 <section id="projects" class="" style="background-color: #FFF">
 	<div class="projects container content-section text-center">
@@ -142,63 +208,55 @@
 				</h1>
 			</div>
 		</div>
-
-		<!--div class="container-fluid">
-			<div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 project wow animated animated4 fadeInLeft">
-		        <div class="project-hover">
-		        	<h2>TITLE</h2>
-		            
-		            <hr />
-		            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas pulvinar ex pulvinar est laoreet ullamcorper.</p>
-		            <a href="#">See Project</a>
-		        </div>
-		    </div>
-			<div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 project project-2 wow animated animated3 fadeInLeft">
-		    	<div class="project-hover">
-		        	<h2>TITLE</h2>
-		            <hr />
-		            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas pulvinar ex pulvinar est laoreet ullamcorper.</p>
-		            <a href="#">See Project</a>
-		        </div>
-		    </div>
-			<div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 project project-3 wow animated animated2 fadeInLeft">
-		    	<div class="project-hover">
-		        	<h2>TITLE</h2>
-		            <hr />
-		            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas pulvinar ex pulvinar est laoreet ullamcorper.</p>
-		            <a href="#">See Project</a>
-		        </div>
-		    </div>
-			<div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 project project-4 wow animated fadeInLeft">
-		    	<div class="project-hover">
-		        	<h2>TITLE</h2>
-		            <hr />
-		            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas pulvinar ex pulvinar est laoreet ullamcorper.</p>
-		            <a href="#">See Project</a>
-		        </div>
-		    </div>
-		    <div class="clearfix"></div>
-		</div-->
-		<div class="row" style="border-color:white">
+		
+		<div class="text-left row" style="padding-bottom: 0.0em; border-color:white">
 			<div class="container gal-container col-lg-10 col-lg-offset-1">
-				<div class="col-md-12 col-sm-6 co-xs-12 gal-item filter ux">
+				<div class="col-md-8 col-sm-6 co-xs-12 gal-item filter ux">
 			      <div class="box">
 			        <img class="filter smartdevice" src="work\corbion\img\view.jpg" class="img-responsive">
-			        <img class="filter kooktafel" src="work\corbion\img\view.jpg" class="img-responsive">
+			        <img class="filter kooktafel" src="work\`reach\img\view.jpg" class="img-responsive">
 			        <img class="filter dochange" src="work\dochange\img\tb.png" class="img-responsive">
 			        <img class="filter eventix" src="work\eventix\img\tb2.jpg" class="img-responsive">
-			        <img class="filter aac" src="work\corbion\img\view.jpg" class="img-responsive">
-			        <img class="filter intel" src="work\corbion\img\view.jpg" class="img-responsive">
+			        <img class="filter aac" src="work\aac\img\view.jpg" class="img-responsive">
 			      </div>
-			    </div>	
+			    </div>
+			    <div clAass="col-md-4 text-left">
+					<h1 class="section-heading" style="font-size: 1.5em; padding-bottom: 0em; color:black;">
+						Project Title
+					</h1>
+					<p class="text-left" style="font-size: 1.1em; padding-top: 0em; color:black">
+						Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
+					</p>
+					<div class="col-sm-6" style="padding-left: 0">
+				      	<h1 class="text-left" style="font-size: 1.1em; color:black">
+								Role
+						</h1>
+						<h1 class="text-left" style="font-size: 1.1em; color:black">
+								Team
+						</h1>
+				    </div>
+				    <div class="col-sm-6">
+				    	<h1 class="text-left" style="font-size: 1.1em; color:black">
+								Country
+						</h1>
+						<h1 class="text-left" style="font-size: 1.1em; color:black">
+								Year
+						</h1>
+				    </div>
+				</div>
+			</div>
+
 			</div>
 		</div>
-		<div class="row" align="center" style="padding-bottom: 2em; border-color:#333">
-            <button class="btn btn-default filter-button" style="color:#333" data-filter="smartdevice">Smartdevice for operators</button>
-            <button class="btn btn-default filter-button" style="color:#333" data-filter="kooktafel">De Kooktafel</button>
-            <button class="btn btn-default filter-button" style="color:#333" data-filter="dochange">Wearable Activity Dashboard</button>
-            <button class="btn btn-default filter-button" style="color:#333" data-filter="eventix">Ticketshop Dashboard</button>
-            <button class="btn btn-default filter-button" style="color:#333" data-filter="aac">AAC service for ALS users</button>
+
+		<div class="row" align="center" style="padding-top: 0.5em; padding-bottom: 2em; border-color:#333">
+			<div class="container gal-container col-lg-10 col-lg-offset-1">
+		        <!--a href="work/corbion/index.html" ><button class="btn btn-default filter-button" style="color:#333" data-filter="smartdevice">Smartdevice for operators</button></a-->
+		        <a href="work/reach/index.html" ><button class="btn btn-default filter-button" style="color:#333" data-filter="kooktafel">De Kooktafel</button></a>
+		        <a href="work/dochange/index.html" ><button class="btn btn-default filter-button" style="color:#333" data-filter="dochange">Healthcare Research Dashboard</button></a>
+		        <a href="work/eventix/index.html" ><button class="btn btn-default filter-button" style="color:#333" data-filter="eventix">Ticketshop dashboard</button></a>
+		        <a href="work/aac/index.html" ><button class="btn btn-default filter-button" style="color:#333" data-filter="aac">EMG-based AAC for ALS users</button></a>
+		    </div>
         </div>
 	</div>
 </section>
