--- a/test.html
+++ b/test.html
@@ -134,72 +134,8 @@
 </section>
 
 
-<!--div id="projects" class="slider-container">
-	<div class="slider-control left inactive"></div>
-	      <div class="slider-control right"></div>
-	      <ul class="slider-pagi"></ul>
-	      <div class="slider">
-	        <div class="slide slide-0 active">
-	          <div class="slide__bg"></div>
-	          <div class="slide__content">
-	            <svg class="slide__overlay" viewBox="0 0 720 405" preserveAspectRatio="xMaxYMax slice">
-	              <path class="slide__overlay-path" d="M0,0 150,0 500,405 0,405" />
-	            </svg>
-	            <div class="slide__text">
-	              <h2 class="slide__text-heading">Smart-device for operators</h2>
-	              <p class="slide__text-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio veniam minus illo debitis nihil animi facere, doloremque voluptate tempore quia. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio veniam minus illo debitis nihil animi facere, doloremque voluptate tempore quia.</p>
-	              <a href="http://hkmbhutto.wix.com/abdulrasheed"
-	              class="slide__text-link">Project link</a>
-	            </div>
-	          </div>
-	        </div>
-	        <div class="slide slide-1 ">
-	          <div class="slide__bg"></div>
-	          <div class="slide__content">
-	            <svg class="slide__overlay" viewBox="0 0 720 405" preserveAspectRatio="xMaxYMax slice">
-	              <path class="slide__overlay-path" d="M0,0 150,0 500,405 0,405" />
-	            </svg>
-	            <div class="slide__text">
-	              <h2 class="slide__text-heading">Cooking-aid Smart-Table</h2>
-	              <p class="slide__text-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio veniam minus illo debitis nihil animi facere, doloremque voluptate tempore quia. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio veniam minus illo debitis nihil animi facere, doloremque voluptate tempore quia.</p>
-	              <a href="http://hkmbhutto.wix.com/abdulrasheed" 
-	              class="slide__text-link">Project link</a>
-	            </div>
-	          </div>
-	        </div>
-	        <div class="slide slide-2">
-	          <div class="slide__bg"></div>
-	          <div class="slide__content">
-	            <svg class="slide__overlay" viewBox="0 0 720 405" preserveAspectRatio="xMaxYMax slice">
-	              <path class="slide__overlay-path" d="M0,0 150,0 500,405 0,405" />
-	            </svg>
-	            <div class="slide__text">
-	              <h2 class="slide__text-heading">Wearable Activity Dashboard</h2>
-	              <p class="slide__text-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio veniam minus illo debitis nihil animi facere, doloremque voluptate tempore quia. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio veniam minus illo debitis nihil animi facere, doloremque voluptate tempore quia.</p>
-	              <a href="http://hkmbhutto.wix.com/abdulrasheed"
-	              class="slide__text-link">Project link</a>
-	            </div>
-	          </div>
-	        </div>
-	        <div class="slide slide-3">
-	          <div class="slide__bg"></div>
-	          <div class="slide__content">
-	            <svg class="slide__overlay" viewBox="0 0 720 405" preserveAspectRatio="xMaxYMax slice">
-	              <path class="slide__overlay-path" d="M0,0 150,0 500,405 0,405" />
-	            </svg>
-	            <div class="slide__text">
-	              <h2 class="slide__text-heading">Ticketshop Dashboard</h2>
-	              <p class="slide__text-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio veniam minus illo debitis nihil animi facere, doloremque voluptate tempore quia. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio veniam minus illo debitis nihil animi facere, doloremque voluptate tempore quia.</p>
-	              <a href="http://hkmbhutto.wix.com/abdulrasheed"
-	              class="slide__text-link">Project link</a>
-	            </div>
-	          </div>
-	        </div>
-	      </div>
-</div-->
-
 <!-- Projects Section-->
-<section id="projects" class="" style="background-color: #FFF">
+<!--section id="projects" class="" style="background-color: #FFF">
 	<div class="projects container content-section text-center">
 		<div class="row" style="border-color:#333">
 			<div class="col-lg-8 col-lg-offset-2 text-center">
@@ -213,51 +149,108 @@
 			<div class="container gal-container col-lg-10 col-lg-offset-1">
 				<div class="col-md-8 col-sm-6 co-xs-12 gal-item filter ux">
 			      <div class="box">
-			        <img class="filter smartdevice" src="work\corbion\img\view.jpg" class="img-responsive">
-			        <img class="filter kooktafel" src="work\`reach\img\view.jpg" class="img-responsive">
-			        <img class="filter dochange" src="work\dochange\img\tb.png" class="img-responsive">
+			        <img class="filter kooktafel" src="work\reach\img\tb2.jpg" class="img-responsive">
+			        <img class="filter dochange" src="work\dochange\img\tb.jpg" class="img-responsive">
 			        <img class="filter eventix" src="work\eventix\img\tb2.jpg" class="img-responsive">
 			        <img class="filter aac" src="work\aac\img\view.jpg" class="img-responsive">
 			      </div>
 			    </div>
-			    <div clAass="col-md-4 text-left">
+			    <div class="col-md-4 text-left" style="padding-left: 1em;">
 					<h1 class="section-heading" style="font-size: 1.5em; padding-bottom: 0em; color:black;">
 						Project Title
 					</h1>
 					<p class="text-left" style="font-size: 1.1em; padding-top: 0em; color:black">
 						Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
 					</p>
-					<div class="col-sm-6" style="padding-left: 0">
-				      	<h1 class="text-left" style="font-size: 1.1em; color:black">
+					<div class="row">
+						<div class="col-sm-6">
+					      	<h1 class="text-left" style="font-size: 1.1em; padding-bottom: 0em; color:black">
 								Role
-						</h1>
-						<h1 class="text-left" style="font-size: 1.1em; color:black">
+							</h1>
+						</div>
+						<div class="col-sm-6">
+							<h1 class="text-left" style="font-size: 1.1em; color:black">
 								Team
-						</h1>
+							</h1>
+					    </div>
 				    </div>
-				    <div class="col-sm-6">
-				    	<h1 class="text-left" style="font-size: 1.1em; color:black">
-								Country
-						</h1>
-						<h1 class="text-left" style="font-size: 1.1em; color:black">
+				    <div class="row">
+					    <div class="col-sm-6">
+					    	<h1 class="text-left" style="font-size: 1.1em; color:black">
+								Client
+							</h1>
+						</div>
+						<div class="col-sm-6">
+							<h1 class="text-left" style="font-size: 1.1em; color:black">
 								Year
-						</h1>
-				    </div>
+							</h1>
+					    </div>
+					</div>
 				</div>
-			</div>
-
 			</div>
 		</div>
 
 		<div class="row" align="center" style="padding-top: 0.5em; padding-bottom: 2em; border-color:#333">
 			<div class="container gal-container col-lg-10 col-lg-offset-1">
-		        <!--a href="work/corbion/index.html" ><button class="btn btn-default filter-button" style="color:#333" data-filter="smartdevice">Smartdevice for operators</button></a-->
 		        <a href="work/reach/index.html" ><button class="btn btn-default filter-button" style="color:#333" data-filter="kooktafel">De Kooktafel</button></a>
 		        <a href="work/dochange/index.html" ><button class="btn btn-default filter-button" style="color:#333" data-filter="dochange">Healthcare Research Dashboard</button></a>
 		        <a href="work/eventix/index.html" ><button class="btn btn-default filter-button" style="color:#333" data-filter="eventix">Ticketshop dashboard</button></a>
 		        <a href="work/aac/index.html" ><button class="btn btn-default filter-button" style="color:#333" data-filter="aac">EMG-based AAC for ALS users</button></a>
 		    </div>
         </div>
+	</div>
+</section-->
+
+<section id="projects" class="" style="background-color: #FFF">
+	<div class="row" style="padding-top: 4em; padding-bottom: 4em; border-color:#333">
+		<div class="col-lg-8 col-lg-offset-2 text-center">
+			<h1 class="section-heading" style="color:#333; font-size: 4em">
+				My projects
+			</h1>
+		</div>
+		<div class="container gal-container">
+	    	<div class="col-md-6 col-sm-6 co-xs-12 gal-item gal-item0">
+			    <div class="box">
+			        <img src="work/corbion/img/tb.jpg">
+			    </div>
+	    	</div>
+	    	<div class="col-md-6 col-sm-6 co-xs-12 gal-item gal-item1">
+			    <div class="box">
+			        <a href="work/reach/index.html">
+			     	   <img src="work/reach/img/tb.jpg">
+			       	</a>
+			    </div>
+	    	</div>
+	    	
+	    	<div class="col-md-6 col-sm-6 co-xs-12 gal-item gal-item2">
+			    <div class="box">
+			        <a href="work/dochange/index.html">
+			     	   <img src="work/dochange/img/tb.png">
+			       	</a>
+			    </div>
+	    	</div>
+	    	<div class="col-md-6 col-sm-6 co-xs-12 gal-item gal-item3">
+			    <div class="box">
+			        <a href="work/eventix/index.html">
+			     	   <img src="work/eventix/img/tb.jpg">
+			       	</a>
+			    </div>
+	    	</div>
+	    	<div class="col-md-12 col-sm-6 co-xs-12 gal-item gal-item4">
+			    <div class="box">
+			        <a href="work/aac/index.html">
+			     	   <img src="work/aac/img/tb.jpg">
+			       	</a>
+			    </div>
+	    	</div>
+	    	<!--div class="col-md-6 col-sm-6 co-xs-12 gal-item gal-item5">
+			    <div class="box">
+			        <a href="work/aac/index.html">
+			     	   <img src="work/icu/img/tb.png">
+			       	</a>
+			    </div>
+	    	</div-->
+  		</div>
 	</div>
 </section>
 
