--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 	<div class="intro-body">
 		<div class="container">
 			<div class="row">
-				<div class="col-md-12 col-md-offset-0 text-left" style="padding-top: 425px">
+				<div class="col-md-12 col-md-offset-0 text-left" style="padding-top: 400px">
 					<div class="row" >
 						<span class="fa-stack fa-2x">
                     		<a href="https://www.linkedin.com/in/danielmariano/" target="_blank"><i class="fa fa-linkedin fa-stack-1x fa"></i></a>
@@ -90,7 +90,6 @@
                 		<span class="fa-stack fa-2x">
                     		<a href="https://twitter.com/dtgmariano" target="_blank"><i class="fa fa-twitter fa-stack-1x fa"></i></a>
                 		</span>
-                		
 					</div>
 					<h1 class="brand-heading">Daniel Mariano</h1><br>
 					<p class="intro-text typewrite" style="color:#00BF00" data-period="1000" data-type='["User Experience Designer", "Jam Session Explorer", "User Experience Designer", "Cook Hacker", "User Experience Designer", "Music Lover"]'></p>
@@ -103,7 +102,7 @@
 
 <!-- About Section -->
 <section id="about" class="bg-black">
-	<div class="container content-section text-center">
+	<div class="container content-section text-center" style="padding-right: 2em; padding-left: 2em">
 		<div class="row" style="border-color:white">
 			<div class="col-sm-1 text-center"></div>
 			<div class="col-sm-4 text-center">
@@ -132,74 +131,6 @@
 		</div>
 	</div>
 </section>
-
-
-<!-- Projects Section-->
-<!--section id="projects" class="" style="background-color: #FFF">
-	<div class="projects container content-section text-center">
-		<div class="row" style="border-color:#333">
-			<div class="col-lg-8 col-lg-offset-2 text-center">
-				<h1 class="section-heading" style="color:#333; font-size: 4em">
-					My projects
-				</h1>
-			</div>
-		</div>
-		
-		<div class="text-left row" style="padding-bottom: 0.0em; border-color:white">
-			<div class="container gal-container col-lg-10 col-lg-offset-1">
-				<div class="col-md-8 col-sm-6 co-xs-12 gal-item filter ux">
-			      <div class="box">
-			        <img class="filter kooktafel" src="work\reach\img\tb2.jpg" class="img-responsive">
-			        <img class="filter dochange" src="work\dochange\img\tb.jpg" class="img-responsive">
-			        <img class="filter eventix" src="work\eventix\img\tb2.jpg" class="img-responsive">
-			        <img class="filter aac" src="work\aac\img\view.jpg" class="img-responsive">
-			      </div>
-			    </div>
-			    <div class="col-md-4 text-left" style="padding-left: 1em;">
-					<h1 class="section-heading" style="font-size: 1.5em; padding-bottom: 0em; color:black;">
-						Project Title
-					</h1>
-					<p class="text-left" style="font-size: 1.1em; padding-top: 0em; color:black">
-						Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
-					</p>
-					<div class="row">
-						<div class="col-sm-6">
-					      	<h1 class="text-left" style="font-size: 1.1em; padding-bottom: 0em; color:black">
-								Role
-							</h1>
-						</div>
-						<div class="col-sm-6">
-							<h1 class="text-left" style="font-size: 1.1em; color:black">
-								Team
-							</h1>
-					    </div>
-				    </div>
-				    <div class="row">
-					    <div class="col-sm-6">
-					    	<h1 class="text-left" style="font-size: 1.1em; color:black">
-								Client
-							</h1>
-						</div>
-						<div class="col-sm-6">
-							<h1 class="text-left" style="font-size: 1.1em; color:black">
-								Year
-							</h1>
-					    </div>
-					</div>
-				</div>
-			</div>
-		</div>
-
-		<div class="row" align="center" style="padding-top: 0.5em; padding-bottom: 2em; border-color:#333">
-			<div class="container gal-container col-lg-10 col-lg-offset-1">
-		        <a href="work/reach/index.html" ><button class="btn btn-default filter-button" style="color:#333" data-filter="kooktafel">De Kooktafel</button></a>
-		        <a href="work/dochange/index.html" ><button class="btn btn-default filter-button" style="color:#333" data-filter="dochange">Healthcare Research Dashboard</button></a>
-		        <a href="work/eventix/index.html" ><button class="btn btn-default filter-button" style="color:#333" data-filter="eventix">Ticketshop dashboard</button></a>
-		        <a href="work/aac/index.html" ><button class="btn btn-default filter-button" style="color:#333" data-filter="aac">EMG-based AAC for ALS users</button></a>
-		    </div>
-        </div>
-	</div>
-</section-->
 
 <section id="projects" class="" style="background-color: #FFF">
 	<div class="row" style="padding-top: 4em; padding-bottom: 4em; border-color:#333">
