--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
 <section id="about" class="bg-black">
 	<div class="container content-section text-center" style="padding-right: 2em; padding-left: 2em">
 		<div class="row" style="border-color:white">
-			<div class="col-sm-1 text-center"></div>
-			<div class="col-sm-4 text-center">
+			<div class="col-sm-0 col-md-1 col-lg-1 text-center"></div>
+			<div class="col-sm-12 col-md-4 col-lg-4 text-center">
 				<h1 class="section-heading" style="font-size: 4em; color:white;">
 					Who am I?
 				</h1>
@@ -114,8 +114,8 @@
 					<br>
 				</p>
 			</div>
-			<div class="col-sm-2 text-center"></div>
-			<div class="col-sm-4 text-center">
+			<div class="col-sm-0 col-md-2 col-lg-2 text-center"></div>
+			<div class="myvision col-sm-12 col-md-4 col-lg-4 text-center">
 				<h1 class="section-heading" style="font-size: 4em; color:white">
 					My vision
 				</h1>
@@ -124,7 +124,7 @@
 					<br>
 				</p>
 			</div>
-			<div class="col-sm-1 text-center"></div>
+			<div class="col-sm-1 col-md-1 col-lg-1 text-center"></div>
 		</div>
 		<div class="row" style="padding-top: 2em;">
 			<a target="_blank" href="https://www.dropbox.com/s/aw9k62e74kp7her/mariano_resume_nov17.pdf?dl=0" class="btnghost" style="border-color: white; color:white"><i class="fa fa-file-pdf-o" style="color:white"></i> Download my CV</a>
