--- a/index.html
+++ b/index.html
@@ -142,13 +142,14 @@
 		<div class="container gal-container">
 	    	<div class="col-md-6 col-sm-6 co-xs-12 gal-item gal-item0">
 			    <div class="box">
-			        <a>
-			     	   <img src="work/corbion/img/tb.jpg">
-			       	</a>
+			    	<a>
+			        	<img src="work/corbion/img/tb.jpg">
+			    	</a>
 			    </div>
 	    	</div>
 	    	<div class="col-md-6 col-sm-6 co-xs-12 gal-item gal-item1">
 			    <div class="box">
+			        <!--a href="work/reach/index.html"-->
 			        <a>
 			     	   <img src="work/reach/img/tb.jpg">
 			       	</a>
@@ -157,6 +158,7 @@
 	    	
 	    	<div class="col-md-6 col-sm-6 co-xs-12 gal-item gal-item2">
 			    <div class="box">
+			        <!--a href="work/dochange/index.html"-->
 			        <a>
 			     	   <img src="work/dochange/img/tb2.jpg">
 			       	</a>
@@ -164,25 +166,27 @@
 	    	</div>
 	    	<div class="col-md-6 col-sm-6 co-xs-12 gal-item gal-item3">
 			    <div class="box">
+			        <!--a href="work/eventix/index.html"-->
 			        <a>
 			     	   <img src="work/eventix/img/tb.jpg">
 			       	</a>
 			    </div>
 	    	</div>
-	    	<!--div class="col-md-6 col-sm-6 co-xs-12 gal-item gal-item4">
+	    	<div class="col-md-6 col-sm-6 co-xs-12 gal-item gal-item4">
 			    <div class="box">
+			        <!--a href="work/aac/index.html"-->
 			        <a>
 			     	   <img src="work/aac/img/tb.jpg">
 			       	</a>
 			    </div>
-	    	</div-->
-	    	<!--div class="col-md-6 col-sm-6 co-xs-12 gal-item gal-item5">
+	    	</div>
+	    	<div class="col-md-6 col-sm-6 co-xs-12 gal-item gal-item5">
 			    <div class="box">
-			        <a href="work/aac/index.html">
-			     	   <img src="work/icu/img/tb.png">
+			        <a class="page-scroll" href="#contact">
+			     	   <img src="img/new.jpg">
 			       	</a>
 			    </div>
-	    	</div-->
+	    	</div>
   		</div>
 	</div>
 </section>
