--- a/index.html
+++ b/index.html
@@ -169,20 +169,20 @@
 			       	</a>
 			    </div>
 	    	</div>
-	    	<!--div class="col-md-6 col-sm-6 co-xs-12 gal-item gal-item4">
+	    	<div class="col-md-6 col-sm-6 co-xs-12 gal-item gal-item4">
 			    <div class="box">
 			        <a>
 			     	   <img src="work/aac/img/tb.jpg">
 			       	</a>
 			    </div>
-	    	</div-->
-	    	<!--div class="col-md-6 col-sm-6 co-xs-12 gal-item gal-item5">
+	    	</div>
+	    	<div class="col-md-6 col-sm-6 co-xs-12 gal-item gal-item5">
 			    <div class="box">
-			        <a href="work/aac/index.html">
-			     	   <img src="work/icu/img/tb.png">
+			        <a class="page-scroll" href="#skills">
+			     	   <img src="img/wslava.jpg">
 			       	</a>
 			    </div>
-	    	</div-->
+	    	</div>
   		</div>
 	</div>
 </section>
